fix: adjust radio button styling to remove unclickable gap

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -1974,6 +1974,16 @@ input.color_edit:checked + label {
   font-weight: 600;
 }
 
+.form-check-input,
+.form-check-label {
+  cursor: pointer;
+}
+
+.form-check-label {
+  margin-left: -0.5em;
+  padding-left: 0.5em;
+}
+
 .help-block {
   color: #2a3744;
 }
